--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
   
   <properties>
   	<log4j-version>1.2.17</log4j-version>
+  	<junit-version>4.12</junit-version>
+  	<spring-test-version>3.1.1.RELEASE</spring-test-version>
+  	<mysql-connector-java-version>5.1.36</mysql-connector-java-version>
   </properties>
+  
   
   <dependencies>
         <dependency>
@@ -46,6 +50,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.2.1</version>
         </dependency>
+        
+        <dependency>
+		  <groupId>mysql</groupId>
+		  <artifactId>mysql-connector-java</artifactId>
+		  <version>${mysql-connector-java-version}</version>
+		</dependency>
+        
        <!--  <dependency>
             <groupId>org.apache.log4j</groupId>
             <artifactId>org.apache.log4j</artifactId>
@@ -121,6 +132,19 @@
  			 <version>1.9.13</version>
 		</dependency>
         
+        <!-- test starting -->
+        <dependency>
+  			<groupId>junit</groupId>
+  			<artifactId>junit</artifactId>
+  			<version>${junit-version}</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.springframework</groupId>
+		  <artifactId>spring-test</artifactId>
+		  <version>${spring-test-version}</version>
+		</dependency>
+        <!-- test end -->
         <!-- <dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
